fix contrast for accessibility in bloc5

--- a/style.css
+++ b/style.css
@@ -736,7 +736,7 @@ h3 {
     font-size: 25px;
     text-transform: uppercase;
     font-weight: 700;
-    color: #333333 !important;
+    color: #333333 ;
 }
 
 .med-width-whitespace {
@@ -1120,7 +1120,7 @@ h4 {
 }
 
 .col-sm-12.text-center>p {
-    font-size: 1.8rem;
+    font-size: 2rem;
 }
 
 .text-center {
@@ -1160,4 +1160,27 @@ p.mg-md {
 
 .col-sm-14:focus {
     border: 3px solid black;
+}
+
+h3:nth-child(2) {
+    font-size: 1.8rem;
+}
+
+h3:nth-child(2)+p {
+    font-size: 1.7rem;
+}
+
+h2.mg-md {
+    color: #FFFFFF;
+    font-size: xx-large;
+    font-weight: 900;
+    text-shadow: #000000 1px 2px;
+}
+
+#contact {
+    font-size: 2.2rem;
+    color: #FFFFFF;
+    display: flex;
+    justify-content: center;
+    text-shadow: 1px 1px black;
 }
